// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectInspector passes \`nodeRenderer\` prop to <TreeView/> 1`] = `
<ol
  role="tree"
  style={
    Object {
      "listStyleType": "none",
      "margin": 0,
      "padding": 0,
    }
  }
>
  <li
    aria-expanded={false}
    role="treeitem"
    style={
      Object {
        "backgroundColor": "white",
        "boxSizing": "border-box",
        "color": "black",
        "cursor": "default",
        "fontFamily": "Menlo, monospace",
        "fontSize": "11px",
        "lineHeight": 1.2,
        "listStyle": "none",
      }
    }
  >
    <div
      onClick={[Function]}
      style={Object {}}
    >
      <span>
        unit test
      </span>
    </div>
    <ol
      role="group"
      style={
        Object {
          "margin": 0,
          "paddingLeft": 12,
        }
      }
    />
  </li>
</ol>
`;

exports[`ObjectInspector should render 1`] = `
<ol
  role="tree"
  style={
    Object {
      "listStyleType": "none",
      "margin": 0,
      "padding": 0,
    }
  }
>
  <li
    aria-expanded={false}
    role="treeitem"
    style={
      Object {
        "backgroundColor": "white",
        "boxSizing": "border-box",
        "color": "black",
        "cursor": "default",
        "fontFamily": "Menlo, monospace",
        "fontSize": "11px",
        "lineHeight": 1.2,
        "listStyle": "none",
      }
    }
  >
    <div
      onClick={[Function]}
      style={Object {}}
    >
      <span
        style={
          Object {
            "color": "rgb(128, 128, 128)",
          }
        }
      >
        undefined
      </span>
    </div>
    <ol
      role="group"
      style={
        Object {
          "margin": 0,
          "paddingLeft": 12,
        }
      }
    />
  </li>
</ol>
`;
